# bop

./: README.md  client.py  conductor.py  connection.py  director.py  game.py  game_recorder.py  game_test.py  main.py  main2.py  mock_random.py  pyproject.toml  run.py  screen.py  server.py  user.py
backend/: server.py
bop/: run.py
bop/backend/: game.py  server.py
bop/frontend/: director.py  screen.py  user.py
frontend/: director.py
testing/: game_recorder.py  game_test.py
tests/: game_recorder.py  game_test.py  mock_random.py  test1.json
