[tool.poetry]
name = "bop"
version = "0.1.2"
description = "A simple python multiplayer game of catch the gold demonstrating the use of controller compatibility."
authors = ["Callum Burns-Curd <callum@fish.cat>"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/C-Bookie/bop"
homepage = "https://github.com/C-Bookie/bop"
keywords = ['sosket', 'testing']

[tool.poetry.dependencies]
python = "^3.7"
pygame = "^1.9.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
bop = 'bop:run.run'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

